--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ To run this booster on your local host:
 
 [source,bash,options="nowrap",subs="attributes+"]
 ----
-$ git clone git@github.com:${loggedUser}/helloworldvertx
+$ git clone git@github.com:eustest/helloworldvertx
 
 $ cd helloworldvertx
 
